--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   
-  <p>Decoded Text: <input class='text' /></p>
+  <p>Decoded Text: <span class='text'></span></p>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
   <script type="text/javascript" src="ZeroClipboard.js"></script>
