--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       padding: 7px 14px;
       color: white;
       border-radius: 8px;
-      text-shadow: 0 0 1px rgba(0, 0, 0, .1)
+      text-shadow: 0 0 1px rgba(0, 0, 0, .1);
+      width: 112px;
     }
     .zc-notify:after {
       content: "";
@@ -24,6 +25,7 @@
       border-top: 7px solid rgba(0,0,0,.8);
       position: absolute; bottom: -7px; left: 57px;
     }
+    .widthtest { display: none; }
   </style>
 </head>
 <body>
@@ -34,7 +36,7 @@
   <script type="text/javascript" src="ZeroClipboard.js"></script>
   <script src='email_link.js'></script>
   <script>
-    $('.text').encode_email('cHJlc3NAY2Fycm90Y3JlYXRpdmUuY29t')
+    $('.text').encode_email('c29vcGVyZG9vcGVybG9uZ2VtYWlsQGFkZHJlc3MuY29t=')
   </script>
 </body>
 </html>
