fixed a b64 encoding bug

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schnearf</title>
+  <title>mailTo Test Page</title>
   <style>
     p { font: 12px sans-serif; margin-top: 50px; }
     #zc-container { position: relative;}
@@ -36,7 +36,7 @@
   <script type="text/javascript" src="ZeroClipboard.js"></script>
   <script src='email_link.js'></script>
   <script>
-    $('.text').encode_email('c29vcGVyZG9vcGVybG9uZ2VtYWlsQGFkZHJlc3MuY29t=')
+    $('.text').encode_email('c29vcGVyZG9vcGVybG9uZ2VtYWlsQGFkZHJlc3MuY29t===')
   </script>
 </body>
 </html>
